# hours

./: .fourmolu.yaml  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  BAE.hs  Budget.hs  CLAUDE.md  Calc.hs  LICENSE.md  Main.hs  README.md  Time.hs  Timelog.hs  Variant.hs  cabal.project  default.nix  flake.nix  gethours  hours.cabal  jobhours  jobhours.el  lefthook.yml  org2tc  package.yaml
.github/workflows/: ci.yml
bae/: BAE.hs  Main.hs
scripts/: check-coverage.sh  check-perf.sh  format.sh
src/Hours/: Budget.hs  Calc.hs  Input.hs  Time.hs  Variant.hs
test/: Spec.hs
test/Hours/: BudgetTest.hs  InputTest.hs  TimeTest.hs
timelog/: Main.hs  Timelog.hs
work/: Main.hs  Work.hs
